refactor: 重构聊天接口，页面。